# ollama-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: console_ui.h  gpu_monitor.h  ollama_client.h
src/: console_ui.cpp  gpu_monitor.cpp  main.cpp  ollama_client.cpp
